# PCClub

./: CMakeLists.txt  Club.h  Event.cc  Event.h  EventFactory.h  EventReader.cc  EventReader.h  Manager.h  README.md  compile_commands.json  main.cc
tests/: .goodoutput.txt.swp  .othertest.txt.swp  .test.txt.swp  .wrongtest.txt.swp  othertest.txt  wrongtest.txt
